--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   display: flex;
   justify-content: center;
-  padding-top: 20px;
+  height: 100%;
 
-  color: #222222;
+  /*color: #222222;*/
 }
