--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ html {
   height: 100%;
   width: 100%;
   line-height: 1;
-  font-size: 10px;
+  /*font-size: 10px;*/
   text-align: left;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
@@ -24,7 +24,8 @@ html {
 }
 
 body{
-  font-size: 1.6rem;
+  font-size: 16px;
+  height: 100%;
 }
 input,button,textarea{font-family:inherit;}
 
@@ -38,4 +39,8 @@ img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 700;}
 /*--------------------*/
+
+#root {
+  height: 100%;
+}
 
